@@ -5,6 +5,11 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+- Add new row: sequence_number to the table for the the document-tab
+  Issue #1503 Dokumentenauflistungen: Einfuegen Spalte Dokumentenlaufnummer
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1503/
+  [eschmutz]
+
 - Activate and configure tabbedview quickupload plugin for opengever.
   Issue #549 Abklaerung: Drag and drop
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
